--- a/myteam-api/build.gradle
+++ b/myteam-api/build.gradle
@@ -19,15 +19,30 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	annotationProcessor 'org.projectlombok:lombok'
+
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	
+//	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.4'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
 	useJUnitPlatform()
+}
+
+configurations {
+	all*.exclude group: 'commons-logging', module: 'commons-logging'
+	all*.exclude group: 'log4j', module: 'log4j'
+	all*.exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+}
+
+dependencies {
+	implementation "org.slf4j:slf4j-api"
+	implementation 'org.slf4j:jcl-over-slf4j'
+	implementation 'org.slf4j:log4j-over-slf4j'
 }
